--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -154,56 +154,111 @@
     					<img src="theme/images/01.jpg">
     				</div>
     				<div class="top-games-content-container">
-    					<span>Game Name Game Name</span><br>
+    					<span>Spider-Man</span><br>
     				</div>
     			</div>
-    			<hr>
     			<div class="top-games-container">
     				<div class="top-games-image-container">
     					<img src="theme/images/02.jpg">
     				</div>
     				<div class="top-games-content-container">
-    					<span>Game Name Game Name</span><br>
+    					<span>The Division 2</span><br>
     				</div>
     			</div>
-    			<hr>
     			<div class="top-games-container">
     				<div class="top-games-image-container">
     					<img src="theme/images/03.jpg">
     				</div>
     				<div class="top-games-content-container">
-    					<span>Game Name Game Name</span><br>
+    					<span>NFL Madden 2019</span><br>
     				</div>
     			</div>
-    			<hr>
     			<div class="top-games-container">
     				<div class="top-games-image-container">
     					<img src="theme/images/04.jpg">
     				</div>
     				<div class="top-games-content-container">
-    					<span>Game Name Game Name</span><br>
+    					<span>Forza New Horizon</span><br>
     				</div>
     			</div>
-    			<hr>
     			<div class="top-games-container">
     				<div class="top-games-image-container">
     					<img src="theme/images/05.jpg">
     				</div>
     				<div class="top-games-content-container">
-    					<span>Game Name Game Name</span><br>
+    					<span>Overwatch</span><br>
     				</div>
     			</div>
-    			<hr>
     		</div>
     	</div><!-- Body row end -->
 
-    	<!-- more row -->
+    	<!-- Comments -->
     	<div class="row">
-    		<div class="col-md-6">6</div>
-    		<div class="col-md-6">6</div>
-    	</div><!-- Body row end -->
+    		<div class="col-md-12">
+                <div class="section-title">
+                    <h3>Features Games</h3>
+                </div>
+                <div class="col-md-3">
+                   <div class="comments-container">
+                        <div class="comments-title">
+                            <span>Overwatch</span>
+                        </div>
+                        <div class="comments-image-container">
+                            <img src="theme/images/05.jpg">
+                        </div>
+                        <div class="comments-content-container">
+                            <span>Play games every single day</span><br>
+                        </div>
+                    </div> 
+                </div>
+                <div class="col-md-3">
+                   <div class="comments-container">
+                        <div class="comments-title">
+                            <span>Spider-Man</span>
+                        </div>
+                        <div class="comments-image-container">
+                            <img src="theme/images/01.jpg">
+                        </div>
+                        <div class="comments-content-container">
+                            <span>Play games every single day</span><br>
+                        </div>
+                    </div> 
+                </div>
+                <div class="col-md-3">
+                   <div class="comments-container">
+                        <div class="comments-title">
+                            <span>NFL Madden 2019</span>
+                        </div>
+                        <div class="comments-image-container">
+                            <img src="theme/images/03.jpg">
+                        </div>
+                        <div class="comments-content-container">
+                            <span>Play games every single day</span><br>
+                        </div>
+                    </div> 
+                </div>
+                <div class="col-md-3">
+                   <div class="comments-container">
+                        <div class="comments-title">
+                            <span>The Division 2</span>
+                        </div>
+                        <div class="comments-image-container">
+                            <img src="theme/images/02.jpg">
+                        </div>
+                        <div class="comments-content-container">
+                            <span>Play games every single day</span><br>
+                        </div>
+                    </div> 
+                </div>
+
+            </div>
+    	</div><!-- Comments end -->
 
     </div>
+
+    <footer class="container-fluid">
+        <span>Video Games Reviews | 2019</span>
+    </footer>
 
     
     <!-- Optional JavaScript -->
