Comment section added

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -255,6 +255,42 @@
 
             </div>
     	</div><!-- Comments end -->
+		
+		<div class="row">
+			<div class="container">
+				<div class="col-md-12">
+					<div class="section-title">
+						<h3>View Article</h3>
+					</div>
+					<div class="view-container">
+						<div class="view-image-container">
+							<img src="theme/images/01.jpg">
+						</div>
+						<div class="view-content-container">
+							<span>Spider-Man</span><br>
+							<span>Activision</span><br>
+							<span>Action</span><br>
+							<span>PlayStation</span><br>
+							<span>2018</span><br>
+							<span>5 Stars</span><br>
+							<span>
+								Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+							</span>
+						</div>
+						<div class="view-comment">
+							<form class="comment-form">
+								<input type="text" name="commenter-name" placeholder="Name">
+								<br>
+								<textarea name="comment-content" placeholder="Comment"></textarea>
+								<br>
+								<button name="submit">Send</button>
+							</form>
+						
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
     </div>
 
