--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -47,19 +47,19 @@
             		<br>
             		<input id="inputPass" type="password" placeholder="password"></input>
             		<br>
-                    <button id="inputIn">Sign In</button><br>
+                    <button id="signInButt">Sign In</button><br>
             		<a href="" >forget password</a>
             		<br>
             		<a href="" id="signUpA" > you don't  have account? register</a>
         		</div>
                 <div class="signing-form" id="signUpForm">
-                    <input id="inputName" type="text" placeholder="name"></input>
+                    <input id="inputNameUp" type="text" placeholder="name"></input>
                     <br>
-                    <input id="inputEmail" type="email" placeholder="email"></input>
+                    <input id="inputEmailUp" type="email" placeholder="email"></input>
                     <br>
-                    <input id="inputPass" type="password" placeholder="password"></input>
+                    <input id="inputPassUp" type="password" placeholder="password"></input>
                     <br>
-                    <button id="inputIn">Sign Up</button><br>
+                    <button id="signUpButt">Sign Up</button><br>
                     <a href="" id="signInA" > you have account? sign in</a>
                 </div>
       		</div><!-- Sign in end -->
@@ -302,7 +302,9 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase.js"></script>
+    <script src="theme/js/keys.js"></script>
     <script src="theme/js/bootstrap.min.js"></script>
     <script src="theme/js/app.js"></script>
-  </body>
+    </body>
 </html>
