--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,7 +30,16 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
 						<ul class="nav navbar-nav navbar-right">
 							<form class="navbar-form navbar-left">
-								<button id="signIn" type="submit" class="btn btn-default">Submit</button>
+                                <button id="signIn" type="submit" class="btn btn-danger">Sign Out</button>
+                                <ul class="nav navbar-nav">
+                                    <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">user@gmail.com <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Add New</a></li>
+                                        <li><a href="#">Signout</a></li>
+                                    </ul>
+                                </li>
+                                </ul>
 							</form>
 						</ul>
 					</div><!-- /.navbar-collapse -->
@@ -53,11 +62,11 @@
             		<a href="" id="signUpA" > you don't  have account? register</a>
         		</div>
                 <div class="signing-form" id="signUpForm">
-                    <input id="inputName" type="text" placeholder="name"></input>
+                    <input id="inputNameUp" type="text" placeholder="name"></input>
                     <br>
-                    <input id="inputEmail" type="email" placeholder="email"></input>
+                    <input id="inputEmailUp" type="email" placeholder="email"></input>
                     <br>
-                    <input id="inputPass" type="password" placeholder="password"></input>
+                    <input id="inputPassUp" type="password" placeholder="password"></input>
                     <br>
                     <button id="inputIn">Sign Up</button><br>
                     <a href="" id="signInA" > you have account? sign in</a>
@@ -154,9 +163,6 @@
                         </span>
                     </div>
                 </div>
-    			
-
-
     		</div>
     		<div class="col-md-3">
     			<div class="section-title">
@@ -273,11 +279,32 @@
 							<span>PlayStation</span><br>
 							<span>2018</span><br>
 							<span>5 Stars</span><br>
-							<span>
-								Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
-							</span>
 						</div>
+                        <div class="view-article-content">
+                            <span>
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content.
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                            </span>
+                            <hr>
+                        </div>
 						<div class="view-comment">
+                            <div class="users-comment">
+                                <i class="fas fa-user"></i> <span>Hussam</span>
+                                <p>Nice article sdgh hgfdhjg hjfgfhdgf gfhgfdg kfdhgkfdg ghjfdg xjfghfjdg kjfdgfdkjg kdjfghfdkjghfd kjfgjfdkghfdjkgh kjfdgdjfghjfdkg kjfgfdkjghdjfkg kfdjgfdkjgdfjgh</p>
+                            </div>
+                            <div class="users-comment">
+                                <i class="fas fa-user"></i> <span>Hussam</span>
+                                <p>Nice article sdgh hgfdhjg hjfgfhdgf gfhgfdg kfdhgkfdg ghjfdg xjfghfjdg kjfdgfdkjg kdjfghfdkjghfd kjfgjfdkghfdjkgh kjfdgdjfghjfdkg kjfgfdkjghdjfkg kfdjgfdkjgdfjgh</p>
+                            </div>
 							<form class="comment-form">
 								<input type="text" name="commenter-name" placeholder="Name">
 								<br>
