--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -323,6 +323,7 @@
 
     <footer class="container-fluid">
         <span>Video Games Reviews | 2019</span>
+        <span>عشان يسحب التحديث</span>
     </footer>
 
     
