--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,11 +29,19 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
 						<ul class="nav navbar-nav navbar-right">
-                            <li>Hi</li>
-							<form class="navbar-form navbar-left">
-								<button id="signIn" type="submit" class="btn btn-default">Submit</button>
-							</form>
+                            <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">hello@mail.com <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Add New</a></li>
+                                <li><a href="#">Sign Out</a></li>
+                            </ul>
+                            <li>
+                                <form class="navbar-form navbar-left">
+                                    <button id="signIn" type="submit" class="btn btn-default">Sign In</button>
+                                </form>
+                            </li>
 						</ul>
+                        
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
 			</nav>
