--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -28,12 +28,12 @@
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
-						<ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">hello@mail.com <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Add New</a></li>
-                                <li><a href="#">Sign Out</a></li>
+						<ul  class="nav navbar-nav navbar-right">
+                            <li   class="dropdown">
+                            <a id="userList" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">hello@mail.com <span class="caret"></span></a>
+                            <ul   class="dropdown-menu">
+                                <li id="newArticle"><a href="#">Add New</a></li>
+                                <li id="logout"><a href="#">Sign Out</a></li>
                             </ul>
                             <li>
                                 <form class="navbar-form navbar-left">
