Add new article

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -265,6 +265,7 @@
             </div>
     	</div><!-- Comments end -->
 		
+        <!-- Article viewer --> 
 		<div class="row">
 			<div class="container">
 				<div class="col-md-12">
@@ -284,6 +285,15 @@
 							<span>5 Stars</span><br>
 							<span>
 								Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
+                                Game Review Content. Game Review Content. Game Review Content. Game Review Content. 
 							</span>
 						</div>
 						<div class="view-comment">
@@ -299,13 +309,38 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div><!-- Article viewer end -->
+
+        <!-- Add new article -->
+        <div class="row">
+			<div class="container">
+				<div class="col-md-12">
+					<div class="section-title">
+						<h3>New Article</h3>
+					</div>
+					<div class="new-article-container">
+						
+						<div class="new-article-form">
+							<form class="article-form">
+                                <label>Article Title:</label><br>
+								<input type="text" name="commenter-name" placeholder="Name">
+								<br>
+                                <label>Article Image:</label><br>
+                                <input type="file" name="article-img">
+								<textarea name="new-article-content" placeholder="Article Content"></textarea>
+								<br>
+								<button name="submit">Add</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><!-- Add new article end -->
 
     </div>
 
     <footer class="container-fluid">
         <span>Video Games Reviews | 2019</span>
-        <span>عشان يسحب التحديث</span>
     </footer>
 
     
@@ -318,3 +353,18 @@
     <script src="theme/js/app.js"></script>
     </body>
 </html>
+
+
+<!--
+ADD NEW ARTICLE
+
+Title
+Image
+Content
+Button
+
+
+
+Rating
+Slider or Number or Stars
+ -->
